# estructurasDeDatosEjercicios

./: ApuntePermitido.c  CMakeLists.txt  EntregaMatrices.c  EntregaRecursividad.c  Unidad3.c  Unidad4.c  Unidad6.c  Unidad7.c  Unidad8.c  aptoExamen-arboles.c  aptoExamen-colas.c  aptoExamen-pilas.c  ejercicioArboles-parcial2-sansberro.c  ejercicioColas-parcial2-sansberro.c  ejercicioPilas-parcial2-sansberro.c  practicaParcial1.c  practicaParcial2.c  primerParcialSansberro.c  repaso2parcial-1.c  repaso2parcial-2.c  segundoParcial-sansberro.c  unidad11-colas.c  unidad11.c  unidad12.c
