cmake_minimum_required(VERSION 3.28)
project(EstructurasDeDatos C)

set(CMAKE_C_STANDARD 11)

add_executable(Unidad3 Unidad3.c)
add_executable(EntregaMatrices EntregaMatrices.c)
add_executable(Unidad4 Unidad4.c)
add_executable(EntregaRecursividad EntregaRecursividad.c)
add_executable(Unidad6 Unidad6.c)
add_executable(Unidad7 Unidad7.c)
add_executable(ApuntePermitido ApuntePermitido.c)
add_executable(Unidad8 Unidad8.c)
