cmake_minimum_required(VERSION 3.28)
project(EstructurasDeDatos C)

set(CMAKE_C_STANDARD 11)

add_executable(Unidad3 Unidad3.c)
add_executable(EntregaMatrices EntregaMatrices.c)
add_executable(Unidad4 Unidad4.c)
add_executable(EntregaRecursividad EntregaRecursividad.c)
add_executable(Unidad6 Unidad6.c)
add_executable(Unidad7 Unidad7.c)
add_executable(ApuntePermitido ApuntePermitido.c)
add_executable(Unidad8 Unidad8.c)
add_executable(practicaParcial1 practicaParcial1.c)
add_executable(practicaParcial2 practicaParcial2.c)
add_executable(primerParcialSansberro primerParcialSansberro.c)
add_executable(unidad11 unidad11.c)
add_executable(aptoExamen-colas aptoExamen-colas.c)
add_executable(aptoExamen-pilas aptoExamen-pilas.c)
add_executable(unidad11-colas unidad11-colas.c)
add_executable(aptoExamen-arboles aptoExamen-arboles.c)
add_executable(unidad12 unidad12.c)
